Fix pieces alignment issue

--- a/chess_blunders/app/web/src/styles/chessground.css
+++ b/chess_blunders/app/web/src/styles/chessground.css
@@ -1,9 +1,17 @@
+/*
+ * Chessground base css properties.
+ *
+ * You need to include the css files in themes folder in order to have the
+ * board and pieces displayed!
+ */
+
 .cg-wrap {
-  width: 512px;
-  height: 512px;
+  width: 320px;
+  height: 320px;
   position: relative;
   display: block;
 }
+
 cg-helper {
   position: absolute;
   width: 12.5%;
@@ -43,17 +51,35 @@ cg-board square {
   pointer-events: none;
 }
 cg-board square.move-dest {
-  background: radial-gradient(rgba(20, 85, 30, 0.5) 22%, #208530 0, rgba(0, 0, 0, 0.3) 0, rgba(0, 0, 0, 0) 0);
+  background: radial-gradient(
+    rgba(20, 85, 30, 0.5) 22%,
+    #208530 0,
+    rgba(0, 0, 0, 0.3) 0,
+    rgba(0, 0, 0, 0) 0
+  );
   pointer-events: auto;
 }
 cg-board square.premove-dest {
-  background: radial-gradient(rgba(20, 30, 85, 0.5) 22%, #203085 0, rgba(0, 0, 0, 0.3) 0, rgba(0, 0, 0, 0) 0);
+  background: radial-gradient(
+    rgba(20, 30, 85, 0.5) 22%,
+    #203085 0,
+    rgba(0, 0, 0, 0.3) 0,
+    rgba(0, 0, 0, 0) 0
+  );
 }
 cg-board square.oc.move-dest {
-  background: radial-gradient(transparent 0%, transparent 80%, rgba(20, 85, 0, 0.3) 80%);
+  background: radial-gradient(
+    transparent 0%,
+    transparent 80%,
+    rgba(20, 85, 0, 0.3) 80%
+  );
 }
 cg-board square.oc.premove-dest {
-  background: radial-gradient(transparent 0%, transparent 80%, rgba(20, 30, 85, 0.2) 80%);
+  background: radial-gradient(
+    transparent 0%,
+    transparent 80%,
+    rgba(20, 30, 85, 0.2) 80%
+  );
 }
 cg-board square.move-dest:hover {
   background: rgba(20, 85, 30, 0.3);
@@ -69,7 +95,13 @@ cg-board square.selected {
   background-color: rgba(20, 85, 30, 0.5);
 }
 cg-board square.check {
-  background: radial-gradient(ellipse at center, rgba(255, 0, 0, 1) 0%, rgba(231, 0, 0, 1) 25%, rgba(169, 0, 0, 0) 89%, rgba(158, 0, 0, 0) 100%);
+  background: radial-gradient(
+    ellipse at center,
+    rgba(255, 0, 0, 1) 0%,
+    rgba(231, 0, 0, 1) 25%,
+    rgba(169, 0, 0, 0) 89%,
+    rgba(158, 0, 0, 0) 100%
+  );
 }
 cg-board square.current-premove {
   background-color: rgba(20, 30, 85, 0.5);
@@ -87,7 +119,7 @@ cg-board square.current-premove {
 }
 cg-board piece.dragging {
   cursor: move;
-  z-index: 9;
+  z-index: 10;
 }
 cg-board piece.anim {
   z-index: 8;
@@ -102,19 +134,23 @@ cg-board piece.fading {
 .cg-wrap piece.ghost {
   opacity: 0.3;
 }
-.cg-wrap svg {
+.cg-wrap .cg-shapes,
+.cg-wrap .cg-custom-svgs {
   overflow: hidden;
-  position: relative;
+  position: absolute;
   top: 0px;
   left: 0px;
   width: 100%;
   height: 100%;
   pointer-events: none;
-  z-index: 2;
-  opacity: 0.6;
 }
-.cg-wrap svg image {
-  opacity: 0.5;
+.cg-wrap .cg-shapes {
+  opacity: 0.6;
+  z-index: 2;
+}
+.cg-wrap .cg-custom-svgs {
+  /* over piece.anim = 8, but under piece.dragging = 10 */
+  z-index: 9;
 }
 .cg-wrap coords {
   position: absolute;
